--- a/01-qr-code/index.html
+++ b/01-qr-code/index.html
@@ -22,21 +22,25 @@
 </head>
 
 <body class="background">
-  <div class="card">
-    <img class="card-qr-code" src="./images/image-qr-code.png" />
-    <div class="card-content">
-      <div class="card-content-header m-heading">
-        Improve your front-end skills by building projects
-      </div>
-      <div class="card-content-body m-body">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  <main>
+    <div class="card">
+      <img class="card-qr-code" src="./images/image-qr-code.png" />
+      <div class="card-content">
+        <div class="card-content-header m-heading">
+          Improve your front-end skills by building projects
+        </div>
+        <div class="card-content-body m-body">
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </div>
       </div>
     </div>
-  </div>
+  </main>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
 </body>
 </html>
