--- a/01-qr-code/index.html
+++ b/01-qr-code/index.html
@@ -10,7 +10,8 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; position: absolute; bottom: 4%;}
+    footer { position: absolute; bottom: 4px; }
+    .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 
